-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 25
-
Component/s: hotspot
-
Environment:
8330851
-
b07
ifdef should be if
src/hotspot/share/opto/runtime.cpp:2006:41: error: ‘make_notify_jvmti_vthread_Type’ was not declared in this scope; did you mean ‘_notify_jvmti_vthread_Type’?
2006 | _notify_jvmti_vthread_Type = make_notify_jvmti_vthread_Type();
src/hotspot/share/opto/runtime.cpp:2006:41: error: ‘make_notify_jvmti_vthread_Type’ was not declared in this scope; did you mean ‘_notify_jvmti_vthread_Type’?
2006 | _notify_jvmti_vthread_Type = make_notify_jvmti_vthread_Type();
- relates to
-
JDK-8330851 C2: More efficient TypeFunc creation
-
- Resolved
-
- links to
-
Commit(master)
openjdk/jdk/0ff67000
-
Review(master)
openjdk/jdk/23172