8347987: Bad ifdef in 8330851

Reviewed-by: stefank, mdoerr, syan, amitkumar